feat: updated some endpoints
